# PolarCppSharpTest

./: PolarCppSharpTest.sln
PolarCppSharpTest/: CMakeLists.txt  Includes.hpp  PolarCppSharpTest.csproj  Program.cs  Rakefile  TestStringOptional.cs  TestStrings.cs
PolarCppSharpTest/CSharpAPI/: ByteVectorHolder.cs  Std.cs  Utils.cs  Vector2DHolder.cs  VectorHolder.cs
PolarCppSharpTest/CppAPI/: StringOptionalTest.cpp  StringOptionalTest.hpp
PolarCppSharpTest/CppAPI/Interop/: Bootstrap.hpp  ByteVectorHolder.cpp  ByteVectorHolder.hpp  Optional.hpp  StringOptional.cpp  StringOptional.hpp  Vector2DHolder.hpp  VectorHolder.hpp
PolarCppSharpTest/Template/: Vector_val.cs.in
